crawling function implemented